--- a/BattleShip/BattleShip.csproj
+++ b/BattleShip/BattleShip.csproj
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\DAL\DAL.csproj" />
+        <ProjectReference Include="..\Models\Models.csproj" />
+    </ItemGroup>
 </Project>
